--- a/wedding plan/index.html
+++ b/wedding plan/index.html
@@ -6,6 +6,21 @@
     <title>Wedding Planner</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Custom styles */
+        header {
+            background-color: #EDE6DF; /* Updated header color */
+        }
+        footer {
+            background-color: #EDE6DF; /* Updated footer color */
+        }
+        .nav-link {
+            color: #000; /* Update nav link color */
+        }
+        .nav-link:hover {
+            color: #555; /* Darker color on hover */
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -30,7 +45,7 @@
         </div>
     </nav>
 
-    <header class="text-center bg-primary text-white py-5">
+    <header class="text-center text-dark py-5">
         <h1>Plan Your Dream Wedding</h1>
         <p>Make your special day unforgettable</p>
     </header>
@@ -39,7 +54,7 @@
         <h2 class="text-center mb-4">Gallery</h2>
         <div class="row mb-4 align-items-center">
             <div class="col-md-6">
-                <img src="images\1.png" class="img-fluid rounded" alt="Wedding Photo 1">
+                <img src="images/1.png" class="img-fluid rounded" alt="Wedding Photo 1">
             </div>
             <div class="col-md-6 text-center text-md-start">
                 <p>Capture the beautiful moments of your special day with elegance and style.</p>
@@ -47,7 +62,7 @@
         </div>
         <div class="row mb-4 align-items-center flex-md-row-reverse">
             <div class="col-md-6">
-                <img src="images\2.png" class="img-fluid rounded" alt="Wedding Photo 2">
+                <img src="images/2.png" class="img-fluid rounded" alt="Wedding Photo 2">
             </div>
             <div class="col-md-6 text-center text-md-start">
                 <p>Every picture tells a story. Let us help you create unforgettable memories.</p>
@@ -55,7 +70,7 @@
         </div>
         <div class="row mb-4 align-items-center">
             <div class="col-md-6">
-                <img src="images\3.png" class="img-fluid rounded" alt="Wedding Photo 3">
+                <img src="images/3.png" class="img-fluid rounded" alt="Wedding Photo 3">
             </div>
             <div class="col-md-6 text-center text-md-start">
                 <p>Relive your special day through our curated gallery of timeless images.</p>
@@ -63,14 +78,13 @@
         </div>
         <div class="row mb-4 align-items-center flex-md-row-reverse">
             <div class="col-md-6">
-                <img src="images\4.png" class="img-fluid rounded" alt="Wedding Photo 4">
+                <img src="images/4.png" class="img-fluid rounded" alt="Wedding Photo 4">
             </div>
             <div class="col-md-6 text-center text-md-start">
                 <p>Our photography captures the essence of love, joy, and celebration.</p>
             </div>
         </div>
     </section>
-    
 
     <section id="about" class="bg-light py-5">
         <div class="container">
@@ -79,18 +93,16 @@
         </div>
     </section>
 
+    <section id="contact" class="container my-5 text-center">
+        <h2 class="mb-4">Get in Touch</h2>
+        <p>If you have any inquiries or would like to book our services, please fill out our form!</p>
+        <a href="https://forms.gle/JVhvzgvuZW6UBvSr7" target="_blank" class="btn btn-primary">Open Contact Form</a>
+    </section>
 
-            <section id="contact" class="container my-5 text-center">
-                <h2 class="mb-4">Get in Touch</h2>
-                <p>If you have any inquiries or would like to book our services, please fill out our form!</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLScvJzdnOrXThOpwrQDp4dcT1NcVlAmvF8a99bEy0zHC8AWhdA/viewform?usp=dialog" target="_blank" class="btn btn-primary">Open Contact Form</a>
-            </section>
-
-    <footer class="bg-dark text-white text-center py-3">
+    <footer class="text-center py-3">
         <p>&copy; 2025 Wedding Planner. All rights reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
